Fetch data and serialize it.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ ansi_term = "0.12"
 dotenv = "0.15"
 form_urlencoded = "1.0"
 reqwest = {version = "0.11", features = ["blocking", "json"]}
+serde_json = "1.0"
 structopt = "0.3"
