--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ ansi_term = "0.12"
 dotenv = "0.15"
 form_urlencoded = "1.0"
 reqwest = {version = "0.11", features = ["blocking", "json"]}
+serde = "1.0"
+serde_derive = "1.0"
 serde_json = "1.0"
 structopt = "0.3"
