--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 
 [dependencies]
 ansi_term = "0.12"
+chrono = "0.4"
 dotenv = "0.15"
 form_urlencoded = "1.0"
 reqwest = {version = "0.11", features = ["blocking", "json"]}
