--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ansi_term = "0.12"
 chrono = "0.4"
 dotenv = "0.15"
 form_urlencoded = "1.0"
@@ -16,3 +15,4 @@ serde_derive = "1.0"
 serde_json = "1.0"
 structopt = "0.3"
 term-table = "1.3"
+text-colorizer = "1.0"
